syntax = "proto3";


package user;

service UserService {
  
  rpc CreateUser(User) returns (User){}
  rpc Get(ById) returns (GetUser){}
  rpc Update(UpReq) returns (User){}
  rpc Delete(PasswordReq) returns (EmptyResp){}
  rpc Login(PasswordReq) returns (User){}
  rpc ListUser(ListReq) returns (ListResp){}
  rpc CheckField(PasswordReq) returns(Status){}
  rpc OpenDay(ById) returns (Hours){}
  rpc GetTime(ById) returns (Hours){}
}

message ListResp {
  repeated User Users = 1;
  int64 count = 2;
}

message ListReq {
  int64 page = 1;
  int64 limit = 2;
}

message ById {
  string userid = 1;
}

message Status {
  string position = 1;
}

message EmptyResp {}

message User {
    string id = 1;
    string f_name = 2;
    string l_name = 3;
    string password = 4;
    string monthly = 5;
    string created_at = 6;
    string updated_at = 7;
    string deleted_at = 8;
    string position = 9;
}

message GetUser {
  string id = 1;
  string f_name = 2;
  string l_name = 3;
  string password = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
  repeated Hours Hour = 8;
  string position = 9;
}

message Hours {
  string id = 1;
  string user_id = 2;
  string opened = 3;
  string closed = 4;
  string daily = 5;
  string monthly = 6;
  string date = 7;
}


message PasswordReq{
    string password = 1;
}

message LogReq {
  string id = 1;
  string password = 2;
}

message UpReq {
    string f_name = 1;
    string l_name = 2;
    string old_password = 3;
    string created_at = 4;
    string updated_at = 5;
    string deleted_at = 6;
    string new_password = 7;
    string position = 8;
}


